fix: fix covering
close #92

--- a/src/component/ziltag-reader/index.css
+++ b/src/component/ziltag-reader/index.css
@@ -22,6 +22,8 @@ body.ziltag-ziltag-reader-activated {
 
 body.ziltag-ziltag-reader-activated--mobile {
   position: relative;
+  width: 100%;
+  height: 100%;
   margin: 0;
 }
 
